hphp/hack/test/typecheck/disjoint/prim.php.exp
File "prim.php", line 11, characters 3-6:
A `where` type constraint is violated here (Typing[4323])
  File "prim.php", line 7, characters 10-13:
  This is the method with `where` type constraints
  File "prim.php", line 11, characters 18-24:
  Expected `nothing`
  File "prim.php", line 7, characters 42-43:
    via this generic `T3`
  File "prim.php", line 11, characters 13-15:
  But got `int`
  File "prim.php", line 7, characters 52-53:
    via this generic `T2`
File "prim.php", line 12, characters 3-9:
A `where` type constraint is violated here (Typing[4323])
  File "prim.php", line 8, characters 10-16:
  This is the method with `where` type constraints
  File "prim.php", line 8, characters 51-59:
  Expected `nothing`
  File "prim.php", line 12, characters 24-26:
  But got `int`
  File "prim.php", line 8, characters 45-46:
    via this generic `T3`
